Closed
Bug 283840
Opened 21 years ago
Closed 21 years ago
"Select User Profile" dialog is broken after using "Custom" in installer
Categories
(SeaMonkey :: Installer, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: MatsPalmgren_bugz, Assigned: ajschult784)
Details
(Keywords: regression)
Attachments
(2 files, 2 obsolete files)
|
2.27 KB,
image/png
|
Details | |
|
4.35 KB,
patch
|
benjamin
:
review+
dveditz
:
superreview+
|
Details | Diff | Splinter Review |
"Select User Profile" dialog is broken after using "Custom" in installer
STEPS TO REPRODUCE:
1. run the full installer from:
ftp://ftp.mozilla.org/pub/mozilla.org/mozilla/nightly/latest-trunk/mozilla-i686-pc-linux-gnu-full-installer.tar.gz
2. click Next until you get to the "choose setup type" then choose "Custom"
3. Complete the installation process - I don't think it matters which tools you
select to install (which is kind of odd because if I choose the "Complete"
setup type then it works fine, but "Custom" with all tools selected fails.)
4. start Mozilla
ACTUAL RESULTS:
When Mozilla starts it shows a window with the text <dialog^ in it.
See screenshot.
EXPECTED RESULTS:
The "Select User Profile" dialog.
PLATFORMS and BUILDS TESTED:
Bug occurs in Mozilla 2005-02-26-05 trunk Linux.
The bug started a few days ago.
| Reporter | ||
Comment 1•21 years ago
|
||
| Reporter | ||
Comment 2•21 years ago
|
||
This installer works:
http://ftp.mozilla.org/pub/mozilla.org/mozilla/nightly/2005-02-21-06-trunk/mozilla-i686-pc-linux-gnu-full-installer.tar.gz
This does not work:
http://ftp.mozilla.org/pub/mozilla.org/mozilla/nightly/2005-02-22-06-trunk/mozilla-i686-pc-linux-gnu-full-installer.tar.gz
Checkins in that window:
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2005-02-21+04%3A00&maxdate=2005-02-22+08%3A00&cvsroot=%2Fcvsroot
Maybe caused by bug 242524?
| Assignee | ||
Comment 3•21 years ago
|
||
(thanks for catching this Mats)
the index owned by the component should have been nuked. The component list
was just walking the list with a brute force search anyway. This also removes
the paranoia that covered up this bug (made it fail silently instead of
crashing/providing an error message).
Assignee: cmp → ajschult
Status: NEW → ASSIGNED
Attachment #175665 -
Flags: superreview?(dveditz)
Attachment #175665 -
Flags: review?(benjamin)
| Assignee | ||
Comment 4•21 years ago
|
||
oh, and I'm guessing that the custom setup type was not installing one of the
strings packages or something that resulted in the strange dialog.
Component: Build Config → Installer
Flags: blocking1.8b2?
| Assignee | ||
Comment 5•21 years ago
|
||
the change to nsXInstaller is needed too to actually propogate the error
Attachment #175665 -
Attachment is obsolete: true
Attachment #175666 -
Flags: superreview?(dveditz)
Attachment #175666 -
Flags: review?(benjamin)
| Assignee | ||
Updated•21 years ago
|
Attachment #175665 -
Flags: superreview?(dveditz)
Attachment #175665 -
Flags: review?(benjamin)
| Assignee | ||
Comment 6•21 years ago
|
||
Comment on attachment 175666 [details] [diff] [review]
left one out
no, no, no, no, no
Attachment #175666 -
Flags: superreview?(dveditz)
Attachment #175666 -
Flags: review?(benjamin)
| Assignee | ||
Comment 7•21 years ago
|
||
The component list was making the index into the component's position in its
list, which was wrong (and confusing). The index is supposed to be the
component's position in the list of all components as they are parsed in
nsComponentsDlg.
Attachment #175666 -
Attachment is obsolete: true
| Assignee | ||
Updated•21 years ago
|
Attachment #175667 -
Flags: superreview?(dveditz)
Attachment #175667 -
Flags: review?(benjamin)
Updated•21 years ago
|
Attachment #175667 -
Flags: review?(benjamin) → review+
| Assignee | ||
Updated•21 years ago
|
Severity: normal → critical
Comment 8•21 years ago
|
||
Comment on attachment 175667 [details] [diff] [review]
the real thing
sr=dveditz
Attachment #175667 -
Flags: superreview?(dveditz) → superreview+
| Assignee | ||
Comment 9•21 years ago
|
||
FIXED
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•21 years ago
|
Flags: blocking1.8b2?
You need to log in
before you can comment on or make changes to this bug.
Description
•