Bug 283840 "Select User Profile" dialog is broken after using "Custom" in installer patch by ajschult@verizon.net r=bsmedberg sr=dveditz